# Holo-SpoK

./: .gitignore  README.md
ROSPackages/: .gitignore  Dockerfile  Makefile  README.md
ROSPackages/asa_linux_sdk/: README.md
ROSPackages/asa_ws/src/spot_prl/: README.md
ROSPackages/asa_ws/src/spot_prl/holo_spot_prl/: CMakeLists.txt  package.xml
ROSPackages/asa_ws/src/spot_prl/spot_driver/: CMakeLists.txt  package.xml  setup.py
ROSPackages/asa_ws/src/spot_prl/spot_driver/launch/: keyboard.launch  spot_interface.launch.example
ROSPackages/asa_ws/src/spot_prl/spot_driver/scripts/: heartbeat.py  keyboard_teleop.py  spot_interface.py
UnityApp/: README.md
UnityApp/Assets/: WSATestCertificate.pfx
UnityApp/Assets/MRTK.Tutorials.AzureSpatialAnchors/Prefabs/: ParentAnchor.prefab
UnityApp/Assets/MRTK.Tutorials.AzureSpatialAnchors/Scripts/: AnchorModuleScript.cs
UnityApp/Assets/MRTK/SDK/Profiles/: DefaultMixedRealitySceneSystemProfile.asset
UnityApp/Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityInputSystemProfile.asset  New MixedRealitySpatialAwarenessSystemProfile 1.asset  New MixedRealitySpatialAwarenessSystemProfile.asset  New MixedRealitySpeechCommandsProfile.asset  New MixedRealityToolkitConfigurationProfile 1.asset  New MixedRealityToolkitConfigurationProfile.asset
UnityApp/Assets/PRLHoloLensROS/Prefabs/: Axes.prefab  GoalMarker.prefab  RosBridgeIP.prefab
UnityApp/Assets/PRLHoloLensROS/ScriptableObjects/Events/: AnchorIdEvent.asset  FollowModeEvent.asset  PublishTransformStamped.asset
UnityApp/Assets/PRLHoloLensROS/ScriptableObjects/Variables/: AnchorId.asset  FollowMode.asset  TransformToPublish.asset
UnityApp/Assets/PRLHoloLensROS/Scripts/: ToggleFollowMode.cs  ToggleRenderers.cs
UnityApp/Assets/PRLHoloLensROS/Scripts/ROS/: ComeHere.cs  Follow.cs  PublishAnchorId.cs  PublishPose.cs  StampedPosePublisher.cs  StampedTransformSubscriber.cs  StringPublisher.cs  heartbeat.cs
UnityApp/Assets/PRLHoloLensROS/Scripts/SceneConfig/: AsaJsonFileReader.cs  InitialSceneLoader.cs  IpInputHandler.cs  RosBridgeIP.cs
UnityApp/Assets/Resources/: azure_asa_account_config.example.json
UnityApp/Assets/Scenes/: MainScene.unity  ManagerScene.unity  ROSBridgeIPScene.unity
UnityApp/Assets/XR/: XRGeneralSettings.asset
UnityApp/Assets/XR/Settings/: Windows MR Package Settings.asset
UnityApp/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+17 files in other folders)
